# et-hs

./: .drone.yml  .gitignore  Cargo.toml  LICENSE.tileset  Makefile
assets/: et-hs.ldtk
assets/atlas/: .gitignore
assets/et-hs/: 0000-H_Hall_SW.ldtkl  0001-H_Hall_Central.ldtkl  0002-H_Vestibule.ldtkl  0003-Principals_Office.ldtkl  0004-Elevator.ldtkl  0005-H114.ldtkl  0006-H107.ldtkl  0007-H109.ldtkl  0008-E_Hall.ldtkl  0009-North_Hall.ldtkl  0010-H101.ldtkl  0011-N103.ldtkl  0012-N105.ldtkl  0013-N107.ldtkl  0014-N109.ldtkl  0015-North_Hall2.ldtkl  0016-Beardsley_Cafeteria.ldtkl  0017-Infirmary.ldtkl  0018-N108.ldtkl  0019-N112.ldtkl  0020-N106.ldtkl  0021-Gym_Hallway6.ldtkl  0022-Beardsley_Gym.ldtkl  0023-Gym_Hallway4.ldtkl  0024-G170.ldtkl  0025-G160.ldtkl  0026-G165.ldtkl  0027-G175.ldtkl  0028-G180.ldtkl  0029-Athletics.ldtkl  0030-Pool_Hallway.ldtkl  0031-Pool.ldtkl  0032-West_Hallway.ldtkl  0033-W105.ldtkl  0034-W107.ldtkl  0035-W109.ldtkl  0036-W111.ldtkl  0037-W113.ldtkl  0038-W115.ldtkl  0039-W103.ldtkl  (+119 more)
src/: camera.rs  main.rs  physics.rs  player.rs  setup.rs  wall.rs
