[package]
name = "et-hs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6.0"
bevy_ecs_ldtk = "*"
bevy-inspector-egui = "*"
heron = { version = "*", features = ["2d"] }
bevy_ase = { git = "https://github.com/B-Reif/bevy_ase" }
benimator = "*"
